@@ -1,12 +1,13 @@
 package com.cncstock.service;
 
 import com.cncstock.event.StockItemUpdateEvent;
-import com.cncstock.model.dto.StockItemCategoryDTO;
 import com.cncstock.model.dto.StockItemDTO;
 import com.cncstock.model.entity.stockitem.StockItem;
 import com.cncstock.model.entity.stockitem.StockItemCategory;
+import com.cncstock.model.entity.stockitem.StockItemSubCategory;
+import com.cncstock.repository.stockitem.StockItemCategoryRepository;
 import com.cncstock.repository.stockitem.StockItemRepository;
-import com.cncstock.repository.stockitem.VendingTransactionRepository;
+import com.cncstock.repository.stockitem.StockItemSubCategoryRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
@@ -19,18 +20,21 @@ import java.util.stream.Collectors;
 public class StockItemService {
 
     private final StockItemRepository stockItemRepository;
+    private final StockItemCategoryRepository stockItemCategoryRepository;
 
-
+    private final StockItemSubCategoryRepository stockItemSubCategoryRepository;
     private final ApplicationEventPublisher eventPublisher;
+
     @Autowired
-    public StockItemService(StockItemRepository stockItemRepository, ApplicationEventPublisher eventPublisher) {
+    public StockItemService(StockItemRepository stockItemRepository, StockItemCategoryRepository stockItemCategoryRepository, StockItemSubCategoryRepository stockItemSubCategoryRepository, ApplicationEventPublisher eventPublisher) {
         this.stockItemRepository = stockItemRepository;
+        this.stockItemCategoryRepository = stockItemCategoryRepository;
+        this.stockItemSubCategoryRepository = stockItemSubCategoryRepository;
         this.eventPublisher = eventPublisher;
     }
 
-
     public List<StockItemDTO> getAllStockItems() {
-        return toDTO();
+        return toDTOList();
     }
 
     public List<StockItem> getAllStockItemsByTitle(String title) {
@@ -46,12 +50,12 @@ public class StockItemService {
         return stockItemOptional.orElse(null);
     }
 
-    public StockItem createStockItem(StockItem stockItem) {
-
-        checkRequiredFields(stockItem, "title", "location", "supplier", "minQty","category","stockQty", "restockQty");
-
-        return stockItemRepository.save(stockItem);
-    }
+//    public StockItem createStockItem(StockItemDTO stockItemDTO) {
+//
+//        checkRequiredFields(StockItem, "title", "location", "supplier", "minQty", "category", "stockQty", "restockQty");
+//
+//        return stockItemRepository.save(stockItem);
+//    }
 
     public StockItem updateStockItem(Long id, StockItem updatedStockItem) {
         Optional<StockItem> stockItemOptional = stockItemRepository.findById(id);
@@ -61,7 +65,7 @@ public class StockItemService {
 
         StockItem existingStockItem = stockItemOptional.get();
 
-        checkRequiredFields(updatedStockItem, "title", "supplier", "minQty", "category", "location","restockQty");
+        checkRequiredFields(updatedStockItem, "title", "supplier", "minQty", "category", "location", "restockQty");
 
         updateProperties(existingStockItem, updatedStockItem);
 
@@ -94,7 +98,7 @@ public class StockItemService {
                     if (numericValue < 0) {
                         throw new IllegalArgumentException(fieldName + " must be a non-negative value.");
                     }
-                    if (fieldName.equals("location") && numericValue < 1 ) {
+                    if (fieldName.equals("location") && numericValue < 1) {
                         throw new IllegalArgumentException(fieldName + " must be assigned to a stock item.");
                     }
 
@@ -121,12 +125,12 @@ public class StockItemService {
                 throw new IllegalArgumentException("Item not updated.");
             }
         }
-        StockItemUpdateEvent event = new StockItemUpdateEvent(this, updatedStockItem, prevQty );
+        StockItemUpdateEvent event = new StockItemUpdateEvent(this, updatedStockItem, prevQty);
         eventPublisher.publishEvent(event);
     }
 
-    private List<StockItemDTO> toDTO() {
-        List<StockItem> stockItemList = stockItemRepository.findAll();
+    private List<StockItemDTO> toDTOList() {
+        List<StockItem> stockItemList = stockItemRepository.findAllWithCategoryAndSubCategory();
 
         return stockItemList.stream()
                 .map(item -> new StockItemDTO(
@@ -137,13 +141,37 @@ public class StockItemService {
                         item.getSupplier(),
                         item.getMinQty(),
                         item.getDescription(),
+                        item.getCategory().getId(),
                         item.getCategory().getCategoryName(),
-                        item.getSubCategory().getSubCategoryName(),
+                        item.getSubCategory().getId(),
+                        item.getSubCategory().getSubCategoryName(), // This should be the sub-category name
                         item.getMaterials(),
                         item.isConstantStock(),
                         item.getStockQty(),
                         item.getRestockQty()))
-                .toList();
+                .collect(Collectors.toList());
+    }
+
+    public StockItem toStockItem(StockItemDTO stockItemDTO) {
+        Optional<StockItemCategory> stockItemCategory = stockItemCategoryRepository.findById(stockItemDTO.getId());
+        Optional<StockItemSubCategory> stockItemSubCategory = stockItemSubCategoryRepository.findById(stockItemDTO.getSubCategoryId());
+
+        StockItem stockItem = new StockItem();
+        stockItem.setId(stockItemDTO.getId());
+        stockItem.setLocation(stockItemDTO.getLocation());
+        stockItem.setTitle(stockItemDTO.getTitle());
+        stockItem.setBrand(stockItemDTO.getBrand());
+        stockItem.setSupplier(stockItemDTO.getSupplier());
+        stockItem.setMinQty(stockItemDTO.getMinQty());
+        stockItem.setDescription(stockItemDTO.getDescription());
+        stockItem.setCategory(stockItemCategory.get());
+        stockItem.setSubCategory(stockItemSubCategory.get());
+        stockItem.setMaterials(stockItemDTO.getMaterials());
+        stockItem.setConstantStock(stockItemDTO.isConstantStock());
+        stockItem.setStockQty(stockItemDTO.getStockQty());
+        stockItem.setRestockQty(stockItemDTO.getRestockQty());
+
+        return stockItem;
     }
 
 }
